--- a/6_CSS_menu/menu.css
+++ b/6_CSS_menu/menu.css
@@ -125,10 +125,10 @@ a{
     border: none;
     outline: none;
     background-color: white;
-    background-image: url('search_icon.png');
+    background-image: url('assets/search_icon.png');
     background-size: cover; 
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
 }
 #searchinput{
     background-color: white;
